--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li class="mx-2 cursor-pointer ">Home</li>
       <li class="mx-2 cursor-pointer">About</li>
       <li class="mx-2 cursor-pointer">Profile</li>
+      <li class="mx-2 cursor-pointer">About</li>
     </ul>
   </nav>
   <div class="container">
